2010-09-29  Sergio Martin <sergio.martin@artica.es>

	*  operation/agentes/tactical.php: Allowed to show
	in process events in tactical view

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Change to the new status 
	images and names to the events on the tactical view.

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.controls.js
	godmode/groups/group_list.php
	godmode/massive/massive_operations.php
	godmode/massive/massive_edit_agents.php: Added the massive
	agent editor to the massive operations for pending task
	#3057662

2010-09-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/fields_manager.php: Fixed the custom fields 
	section notice where is empty

2010-09-28  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Added style parameter to the 
	print_extended_select_for_time function

2010-09-27  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/sound_events.php: fixed the ajax check for when start
	with empty list of events. 

2010-09-27  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_menu.php, operation/events/events_list.php: cleaned
	style source code.

	* operation/menu.php: added subentry in "View events" for "Sound Events".
	
	* operation/events/events_rss.php: added source code for the $id_agent equal
	-2 (this mean that get the agent by text name) and added new check for new
	status.
	
	* operation/events/events.php: added source code for the $id_agent equal -2
	(this mean that get the agent by text name).

2010-09-27  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/agentes/modificar_agente.php: Vertical aligned some icons.
	TO DO: The table should be "migrated" to new table code.

2010-09-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/graph_builder.graph_editor.php
	godmode/reporting/graph_builder.preview.php: Fixed few
	foreach loops to avoid notices setting empty array to 